# PhD_liquidation_model

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SIMULATION_SETUP.md  class_test.ipynb  defi_env.py  liquidation_model.ipynb  my_functions.py  new_liquidation_model.py  notes.md  pyproject.toml
environment/: defi_env copy.py  defi_env.py  parameters.py
examples/: empirical_data_example.py  scenario_comparison.py  simple_scenario_test.py
market_env/: constants.py  settings.py
old_model/: my_functions.py  old_liquidation_model.ipynb  parameters.py
scripts/: environment_test.py
simulation/: __init__.py  agents.py  experiment.py  metrics.py  price_providers.py  scenarios.py
tests/: test_interest_rates_and_accrual.py  test_lending_pool_transactions.py  test_liquidity_pool_transactions.py  test_wallet_borrow.py
