[project]
name = "liquidation_model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bigframes>=2.13.0",
    "datetime>=5.5",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "web3>=7.13.0",
    "yfinance>=0.2.66",
]
